--- a/01- Fundamentals/index.html
+++ b/01- Fundamentals/index.html
@@ -18,6 +18,7 @@
 
 <!--<script src="assets/JS/app.js"></script>-->
 <!--<script src="assets/JS/alerts.js"></script>-->
-<script src="assets/JS/primitives.js"></script>
+<!--<script src="assets/JS/primitives.js"></script>-->
+<script src="assets/JS/arrays.js"></script>
 </body>
 </html>
