--- a/01- Fundamentals/index.html
+++ b/01- Fundamentals/index.html
@@ -20,6 +20,7 @@
 <!--<script src="assets/JS/alerts.js"></script>-->
 <!--<script src="assets/JS/primitives.js"></script>-->
 <!--<script src="assets/JS/arrays.js"></script>-->
-<script src="assets/JS/arrays2.js"></script>
+<!--<script src="assets/JS/arrays2.js"></script>-->
+<script src="assets/JS/literal-objects.js"></script>
 </body>
 </html>
