Starting to work with functions

--- a/01- Fundamentals/index.html
+++ b/01- Fundamentals/index.html
@@ -21,6 +21,7 @@
 <!--<script src="assets/JS/primitives.js"></script>-->
 <!--<script src="assets/JS/arrays.js"></script>-->
 <!--<script src="assets/JS/arrays2.js"></script>-->
-<script src="assets/JS/literal-objects.js"></script>
+<!--<script src="assets/JS/literal-objects.js"></script>-->
+<script src="assets/JS/functions.js"></script>
 </body>
 </html>
