Some tips working with functions

--- a/01- Fundamentals/index.html
+++ b/01- Fundamentals/index.html
@@ -22,6 +22,7 @@
 <!--<script src="assets/JS/arrays.js"></script>-->
 <!--<script src="assets/JS/arrays2.js"></script>-->
 <!--<script src="assets/JS/literal-objects.js"></script>-->
-<script src="assets/JS/functions.js"></script>
+<!--<script src="assets/JS/functions.js"></script>-->
+<script src="assets/JS/protip-returns.js"></script>
 </body>
 </html>
