--- a/01- Fundamentals/index.html
+++ b/01- Fundamentals/index.html
@@ -23,6 +23,7 @@
 <!--<script src="assets/JS/arrays2.js"></script>-->
 <!--<script src="assets/JS/literal-objects.js"></script>-->
 <!--<script src="assets/JS/functions.js"></script>-->
-<script src="assets/JS/protip-returns.js"></script>
+<!--<script src="assets/JS/protip-returns.js"></script>-->
+<script src="assets/JS/reference-value.js"></script>
 </body>
 </html>
