We've learned about boolean logic and its operators NOT !, AND &&, OR ||, etc

--- a/01- Fundamentals/index.html
+++ b/01- Fundamentals/index.html
@@ -25,6 +25,6 @@
 <!--<script src="assets/JS/functions.js"></script>-->
 <!--<script src="assets/JS/protip-returns.js"></script>-->
 <!--<script src="assets/JS/reference-value.js"></script>-->
-<script src="assets/JS/if-else.js"></script>
+<script src="assets/JS/boolean-logic.js"></script>
 </body>
 </html>
