Learning about the Conditional Ternary Operator

--- a/01- Fundamentals/index.html
+++ b/01- Fundamentals/index.html
@@ -25,6 +25,7 @@
 <!--<script src="assets/JS/functions.js"></script>-->
 <!--<script src="assets/JS/protip-returns.js"></script>-->
 <!--<script src="assets/JS/reference-value.js"></script>-->
-<script src="assets/JS/boolean-logic.js"></script>
+<!--<script src="assets/JS/boolean-logic.js"></script>-->
+<script src="assets/JS/ternary-operator.js"></script>
 </body>
 </html>
