Working with the Switch conditional statement

--- a/01- Fundamentals/index.html
+++ b/01- Fundamentals/index.html
@@ -26,6 +26,7 @@
 <!--<script src="assets/JS/protip-returns.js"></script>-->
 <!--<script src="assets/JS/reference-value.js"></script>-->
 <!--<script src="assets/JS/boolean-logic.js"></script>-->
-<script src="assets/JS/ternary-operator.js"></script>
+<!--<script src="assets/JS/ternary-operator.js"></script>-->
+<script src="assets/JS/switch.js"></script>
 </body>
 </html>
