We've learned about the bases so far. Now, it's time for control structures how are loops.

--- a/01- Fundamentals/index.html
+++ b/01- Fundamentals/index.html
@@ -27,6 +27,6 @@
 <!--<script src="assets/JS/reference-value.js"></script>-->
 <!--<script src="assets/JS/boolean-logic.js"></script>-->
 <!--<script src="assets/JS/ternary-operator.js"></script>-->
-<script src="assets/JS/switch.js"></script>
+<!--<script src="assets/JS/bases/switch.js"></script>-->
 </body>
 </html>
