--- a/01- Fundamentals/index.html
+++ b/01- Fundamentals/index.html
@@ -16,17 +16,6 @@
 	Popopo ay se murio, death
 </p>
 
-<!--<script src="assets/JS/app.js"></script>-->
-<!--<script src="assets/JS/alerts.js"></script>-->
-<!--<script src="assets/JS/primitives.js"></script>-->
-<!--<script src="assets/JS/arrays.js"></script>-->
-<!--<script src="assets/JS/arrays2.js"></script>-->
-<!--<script src="assets/JS/literal-objects.js"></script>-->
-<!--<script src="assets/JS/functions.js"></script>-->
-<!--<script src="assets/JS/protip-returns.js"></script>-->
-<!--<script src="assets/JS/reference-value.js"></script>-->
-<!--<script src="assets/JS/boolean-logic.js"></script>-->
-<!--<script src="assets/JS/ternary-operator.js"></script>-->
-<!--<script src="assets/JS/bases/switch.js"></script>-->
+<script src="assets/JS/loops/while-do-while.js"></script>
 </body>
 </html>
