--- a/02- Blackjac/index.html
+++ b/02- Blackjac/index.html
@@ -6,12 +6,52 @@
 		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="assets/css/styles.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+		  integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 	<title>BlackJack</title>
 </head>
 <body>
 
+<header class="title">
+	BlackJack
+</header>
+
+
+<div class="row mt-2">
+	<div class="col text-center">
+
+		<button class="btn btn-danger">New Game</button>
+		<button class="btn btn-primary">New Card</button>
+		<button class="btn btn-primary">Stop</button>
+
+	</div>
+
+</div>
+
+<div class="row container">
+	<div class="col">
+		<h1>Jugador 1 - <small>0</small></h1>
+		<div id="player-cards">
+
+			<img src="assets/cards/2C.png" class="cards">
+			<img src="assets/cards/2C.png" class="cards">
+			<img src="assets/cards/2C.png" class="cards">
+		</div>
+	</div>
+</div>
+
+<div class="row container mt-2">
+	<div class="col">
+		<h1>Computer1 - <small>0</small></h1>
+		<div id="computer-cards">
+
+			<img src="assets/cards/2C.png" class="cards">
+			<img src="assets/cards/2C.png" class="cards">
+			<img src="assets/cards/2C.png" class="cards">
+		</div>
+	</div>
+</div>
 <script src="assets/js/app.js"></script>
 
 </body>
