Working with for, for in, for of loops

--- a/01- Fundamentals/index.html
+++ b/01- Fundamentals/index.html
@@ -16,6 +16,7 @@
 	Popopo ay se murio, death
 </p>
 
-<script src="assets/JS/loops/while-do-while.js"></script>
+<!--<script src="assets/JS/loops/while-do-while.js"></script>-->
+<script src="assets/JS/loops/for.js"></script>
 </body>
 </html>
