--- a/02- Blackjac/index.html
+++ b/02- Blackjac/index.html
@@ -52,6 +52,8 @@
 		</div>
 	</div>
 </div>
+
+<script src="assets/js/underscore-min.js"></script>
 <script src="assets/js/app.js"></script>
 
 </body>
