We've learned a lot in this section! -Better perform of our event btnRequestCard including showing the card is being requesting
-Validating the score of the player: if is 21 the player wins and the button is disabled, but, if the score is greater than 21 the player lose.

--- a/02- Blackjac/index.html
+++ b/02- Blackjac/index.html
@@ -34,9 +34,8 @@
 		<h1>Jugador 1 - <small>0</small></h1>
 		<div id="player-cards">
 
-			<img src="assets/cards/2C.png" class="cards">
-			<img src="assets/cards/2C.png" class="cards">
-			<img src="assets/cards/2C.png" class="cards">
+<!--			<img src="assets/cards/2C.png" class="cards">-->
+
 		</div>
 	</div>
 </div>
@@ -46,9 +45,8 @@
 		<h1>Computer1 - <small>0</small></h1>
 		<div id="computer-cards">
 
-			<img src="assets/cards/2C.png" class="cards">
-			<img src="assets/cards/2C.png" class="cards">
-			<img src="assets/cards/2C.png" class="cards">
+<!--			<img src="assets/cards/2C.png" class="cards">-->
+
 		</div>
 	</div>
 </div>
