--- a/02- Blackjac/index.html
+++ b/02- Blackjac/index.html
@@ -31,7 +31,7 @@
 
 <div class="row container">
 	<div class="col">
-		<h1>Jugador 1 - <span>0</span></h1>
+		<h1>Player 1 - <span>0</span></h1>
 		<div id="player-cards" class="divCards">
 
 <!--			<img src="assets/cards/2C.png" class="cards">-->
