Let's start working with CLasses

--- a/01- Fundamentals/index.html
+++ b/01- Fundamentals/index.html
@@ -17,6 +17,6 @@
 </p>
 
 <!--<script src="assets/JS/loops/while-do-while.js"></script>-->
-<script src="assets/JS/loops/for.js"></script>
+<script src="assets/JS/classes/class.js"></script>
 </body>
 </html>
