--- a/03- webpack-initial/src/index.html
+++ b/03- webpack-initial/src/index.html
@@ -5,18 +5,9 @@
 	<meta name="viewport"
 		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
-
+	<title>Webpack</title>
 </head>
 <body>
-<h1>Klk wawawa</h1>
-<hr>
-
-<p>
-	Popopo ay se murio, death
-</p>
-
-<!--<script src="assets/JS/loops/while-do-while.js"></script>-->
-<!--<script src="assets/JS/classes/singleton.js"></script>-->
+<script src="index.js"></script>
 </body>
 </html>
