Using the copy webpack plugin

--- a/03- webpack-initial/src/index.html
+++ b/03- webpack-initial/src/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 
+<!--Comment-->
+<!--Comment-->
+<!--Comment-->
 
+<img src="assets/img/webpack-logo.png" alt="Webpack Logo">
 
 </body>
 </html>
