--- a/04- To-Do/src/index.html
+++ b/04- To-Do/src/index.html
@@ -5,15 +5,69 @@
 	<meta name="viewport"
 		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Webpack</title>
+	<title>To Do</title>
 </head>
 <body>
+<div class="todoapp">
+	<header class="header">
+		<h1>Tasks</h1>
+		<input class="new-task" placeholder="Add a new task" autofocus>
+	</header>
+<!--This section should be hidden by default and shown when there are tasks-->
+	<div class="main">
+		<input type="checkbox" class="toggle-all" id="toggle-all">
+		<label for="toggle-all">Mark all as complete</label>
+		<ul class="task-list">
+			 <!--These are here just to show the structure of the list items
+			 List items should get the class `editing` when editing and `completed` when marked as completed -->
+<!--			 <li class="completed" data-id="abc">
+				<div class="view">
+					<input class="toggle" type="checkbox" checked>
+					<label>Probar JavaScript</label>
+					<button class="destroy"></button>
+				</div>
+				<input class="edit" value="Create a TodoMVC template">
+			</li>-->
+<!--			 <li>
+				<div class="view">
+					<input class="toggle" type="checkbox">
+					<label>Comprar un unicornio</label>
+					<button class="destroy"></button>
+				</div>
+				<input class="edit" value="Rule the web">
+			</li>-->
+		</ul>
 
-<!--Comment-->
-<!--Comment-->
-<!--Comment-->
+		<div>
+			<footer class="footer">
+				<!--This should be 0 items by default-->
+				<span class="task-count"><strong>0</strong> Pending</span>
+				<!--Remove this if you don't implement routing-->
+				<ul class="filters">
+					<li>
+						<a href="#/" class="filter" id="selected">All</a>
+					</li>
 
-<img src="assets/img/webpack-logo.png" alt="Webpack Logo">
+					<li>
+						<a href="#/active" class="filter" id="pending">Pending</a>
+					</li>
+
+					<li>
+						<a href="#/completed" class="filter" id="completed">Completed</a>
+					</li>
+				</ul>
+				<!--Hidden if no completed items are left-->
+				<button class="clear-completed">Delete Completed</button>
+
+			</footer>
+		</div>
+
+		<!--<footer class="info">
+
+		</footer>-->
+	</div>
+
+</div>
 
 </body>
 </html>
